@@ -4,14 +4,15 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import org.locationtech.jts.geom.Coordinate;
+import org.opentripplanner.raptor.api.model.RaptorCostConverter;
 import org.opentripplanner.raptor.api.model.RaptorTransfer;
-import org.opentripplanner.routing.algorithm.raptoradapter.transit.cost.RaptorCostConverter;
 import org.opentripplanner.routing.api.request.preference.WalkPreferences;
 import org.opentripplanner.street.model.edge.Edge;
 import org.opentripplanner.street.search.request.StreetSearchRequest;
 import org.opentripplanner.street.search.state.EdgeTraverser;
-import org.opentripplanner.street.search.state.StateEditor;
+import org.opentripplanner.street.search.state.State;
 import org.opentripplanner.utils.logging.Throttle;
 import org.opentripplanner.utils.tostring.ToStringBuilder;
 import org.slf4j.Logger;
@@ -84,10 +85,8 @@ public class Transfer {
       );
     }
 
-    StateEditor se = new StateEditor(edges.get(0).getFromVertex(), request);
-    se.setTimeSeconds(0);
-
-    var state = EdgeTraverser.traverseEdges(se.makeState(), edges);
+    var initialStates = State.getInitialStates(Set.of(edges.getFirst().getFromVertex()), request);
+    var state = EdgeTraverser.traverseEdges(initialStates, edges);
 
     return state.map(s ->
       new DefaultRaptorTransfer(
